# poetry-django-app

./: .cpanel.yml  .env  .env.template  .gitignore  Dockerfile  README.md  cpanel.yml  docker-compose.yml  manage.py  pyproject.toml
poetrydjango/: asgi.py  settings.py  urls.py  wsgi.py
