[tool.poetry]
name = "poetry-django"
version = "0.1.0"
description = "A poetry django polls app"
authors = ["David Syengo <d.syengo@institute.global>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_django"}]

[tool.poetry.dependencies]
python = "^3.10.0"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
