[tool.poetry]
name = "poetry-django"
version = "0.1.0"
description = "A poetry django polls app"
authors = ["David Syengo <david.syengo019@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_django"}]

[tool.poetry.dependencies]
python = "^3.10.0"
django = "^4.1.7"
dj-database-url = "^1.2.0"
psycopg = "^3.1.8"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
